[package]
name = "common"
version = "0.1.0"
authors = ["zeliwang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsecp256k1 = "0.2.2"
hmac-drbg = "0.1"
sha2 = "0.6"
digest = "0.6"
typenum = "1.9"
arrayref = "0.3"
secp256k1-test = "0.7"
generic-array = "0.13.2"
rand_core = "0.5.0"

[dependencies.rand]
version = "0.4"
default-features = false
optional = true

[dependencies.rand_chacha]
version = "0.1"
default-features = false
optional = true

[features]
default = ["rand", "chacha"]
chacha = ["rand_chacha"]




