[package]
name = "multisig"
version = "0.1.0"
authors = ["zeliwang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.6"
digest = "0.6"
schnorrkel = "0.8.5"
rand_core = "0.5.0"

[dependencies.rand]
version = "0.6"
default-features = false
optional = true

[dependencies.rand_chacha]
version = "0.1"
default-features = false
optional = true

[features]
default = ["rand", "chacha"]
chacha = ["rand_chacha"]



